--- a/NDII_33km.ipynb
+++ b/NDII_33km.ipynb
@@ -307,8 +307,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DqhFhUUkF6XM",
-        "cellView": "form"
+        "id": "DqhFhUUkF6XM"
       },
       "source": [
         "#@title Initialization\n",
@@ -323,7 +322,7 @@
         "from google.colab import files\n",
         "\n",
         "ee.Authenticate()\n",
-        "ee.Initialize(project='coastal-campus-426814-d1')"
+        "ee.Initialize(project='') # add Google Cloud project ID here"
       ],
       "execution_count": 1,
       "outputs": []
