--- a/NDII_33km.ipynb
+++ b/NDII_33km.ipynb
@@ -290,7 +290,7 @@
         "\n",
         "Compute water-masked Landsat Normalized Difference Infrared Index (NDII, Hardisky et al. [1983](http://scholar.google.com/scholar_lookup?title=The+influences+of+soil+salinity,+growth+form,+and+leaf+moisture+on+the+spectral+reflectance+of+Spartina+alterniflora+canopies&author=MA,++Hardisky&author=V,++Klemas&author=RM.++Smart&volume=49&publication_year=1983&pages=77-83))* at input point within incrementally-increasing circular regions from 1- to 33-km diameter, and view results over user-selected date range. View NAIP availability and time series at input point.\n",
         "\n",
-        "*aka Normalized Difference Water Index (NDWI, Gao [1996](https://doi.org/10.1016/S0034-4257(96)00067-3))\n",
+        "*aka Normalized Difference Water Index (NDWI, Gao [1996](https://www.sciencedirect.com/science/article/pii/S0034425796000673))\n",
         "\n",
         "2024 updates:\n",
         "\n",
