--- a/ASRS24_demo.ipynb
+++ b/ASRS24_demo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtMa+ogPAUSHWcj3eDg14x",
+      "authorship_tag": "ABX9TyPZ0WaAEu/jx2UNjgMJseE0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
         "# Load NAIP\n",
         "# https://developers.google.com/earth-engine/datasets/catalog/USDA_NAIP_DOQQ\n",
         "naip = ee.ImageCollection('USDA/NAIP/DOQQ') \\\n",
-        ".filter(ee.Filter.date('2022-01-01', '2024-12-31')) \\\n",
+        ".filterDate('2022-01-01', '2024-12-31') \\\n",
         ".select(['R', 'G', 'B'])\n",
         "\n",
         "m.add_ee_layer(naip,{'min': 0.0, 'max': 255.0},'NAIP basemap')\n",
